--- a/views/index.html
+++ b/views/index.html
@@ -5,13 +5,12 @@
     <title>Medical Analysis Platform</title>
     <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/base.css">
-    <link rel="stylesheet" type="text/css" href="/css/loginPage.css">
     <script type="text/javascript" src="/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
   </head>
   <body>
     <h1>医疗分析平台</h1>
-    <form class="form-signin">
+    <form class="form-signin" action="/main.html">
       <label for="user-name" class="sr-only">用户名</label>
       <div>
         <input type="text" id="user-name" class="form-control" placeholder="用户名" required autofocus>
@@ -23,10 +22,9 @@
       <div>
         <input type="checkbox" id="check-box" name="remember" style="text-align:center" value="0">记住登录状态
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="button" id="login">登录</button>
+      <button class="btn btn-lg btn-primary btn-block" type="submit" id="login">登录</button>
       <span>还没有帐号？</span>
-      <a href="localhost:3000/register" id="">注册</a>
+      <a href="/register.html">注册</a>
     </form>
   </body>
-  <script type="text/javascript" src="/src/loginPage.js"></script>
 </html>
