--- a/views/panel.html
+++ b/views/panel.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/css/base.css">
@@ -74,5 +74,6 @@
 	  	$("#page-content-wrapper").load("/about.html")
 	  })
   </script>
+  
 </body>
 </html>
