--- a/views/wenzhen.html
+++ b/views/wenzhen.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+
 <h1>智能问诊</h1>
 <div class="container">
 	<div class="row justify-content-between">
@@ -31,20 +34,5 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript">
-	$("#submit-bz").click(e => {
-		e.preventDefault()
-		$("#bz").empty()
-		var arr = $("form").serializeArray()
-		$.ajax({
-			url: '/wenzhen',
-			data: arr
-		}).done(data => {
-			data.forEach(d => {
-				$("#bz").append(`<div>${d}</div>`)
-			})
-		}).fail(() => {
-			alert("服务器出错")
-		})
-	})
-</script>
+<script type="text/javascript" src="/src/wenzhen.js"></script>
+</html>
