--- a/static/css/base.css
+++ b/static/css/base.css
@@ -48,7 +48,7 @@ h1 {
   border-top-right-radius: 0;
 }
 
-#bz {
+.text-result {
 	height: 300px;
 	max-height: 300px;
 	background-color: white;
@@ -59,3 +59,11 @@ h1 {
 	padding-left: 8px;
 }
 
+.scrollable-menu {
+  height: auto;
+  max-height: 100px;
+  background-color: white;
+  overflow-x: hidden;
+  z-index: 1;
+  position: absolute;
+}
