--- a/views/wenzhen.html
+++ b/views/wenzhen.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="/css/wenzhen.css">
-</head>
 <h1>智能问诊</h1>
 <div class="container">
 	<div class="row justify-content-between">
@@ -37,9 +34,10 @@
 		</form>
 		<div class="col">
 			<div>可能的病症如下</div>
-			<div id="bz"></div>
+			<div id="bz" class="text-result"></div>
 		</div>
 	</div>
 </div>
+<script type="text/javascript" src="/src/dropdown.js"></script>
 <script type="text/javascript" src="/src/wenzhen.js"></script>
 </html>
