--- a/views/jiansuo.html
+++ b/views/jiansuo.html
@@ -2,14 +2,11 @@
 <html>
 <head>
 	<style type="text/css">
-		#search {
-			width: 400px;
-		}
 		form {
 			margin-bottom: 10px;
 		}
 		.table {
-			background-color: white
+			background-color: white;
 		}
 	</style>
 </head>
