new prescription done

--- a/views/jiansuo.html
+++ b/views/jiansuo.html
@@ -20,6 +20,7 @@
 	    <div class="scrollable-menu" id="search"></div>
 	  </div>
 	  <button type="submit" class="btn btn-primary" id="submit-name">提交</button>
+	  <a id="test" onclick="clickDownload(this)" download="downlaod.csv" href="#">download</a>
 	</form>
 	<div class="col">
 		<table id="description" class="table table-bordered table-hover">
