--- a/views/register.html
+++ b/views/register.html
@@ -36,7 +36,7 @@
 	</form>	
 	<script type="text/javascript">
 		$("#cancel").click(e => {
-			window.location.href = "/index.html"
+			window.location.href = "/login"
 		})
 	</script>
 	<script type="text/javascript" src="/src/register.js"></script>
