--- a/views/julei.html
+++ b/views/julei.html
@@ -40,12 +40,16 @@
 				  </li>
 				</ul>
 				<div class="tab-content" id="myTabContent">
-				  <div class="tab-pane fade show active" id="tree" role="tabpanel" aria-labelledby="tree-tab">显示图片</div>
-				  <div class="tab-pane fade" id="vis" role="tabpanel" aria-labelledby="vis-tab">显示图片</div>
+				  <div class="tab-pane fade show active" id="tree" role="tabpanel" aria-labelledby="tree-tab">显示图片
+					<div>
+					</div>
+				  </div>
+				  <div class="tab-pane fade" id="vis" role="tabpanel" aria-labelledby="vis-tab">显示图片
+					<div>
+					</div>
+				  </div>
 				</div>
-				<div>
-					<img id="dendrogram" style="width:600px;height:500px;">
-				</div>
+				
 			</div>
 		</div>
 	</div>
