--- a/views/julei.html
+++ b/views/julei.html
@@ -40,16 +40,11 @@
 				  </li>
 				</ul>
 				<div class="tab-content" id="myTabContent">
-				  <div class="tab-pane fade show active" id="tree" role="tabpanel" aria-labelledby="tree-tab">显示图片
-					<div>
-					</div>
+				  <div class="tab-pane fade show active" id="tree" role="tabpanel" aria-labelledby="tree-tab">
 				  </div>
-				  <div class="tab-pane fade" id="vis" role="tabpanel" aria-labelledby="vis-tab">显示图片
-					<div>
-					</div>
+				  <div class="tab-pane fade" id="vis" role="tabpanel" aria-labelledby="vis-tab">
 				  </div>
 				</div>
-				
 			</div>
 		</div>
 	</div>
