--- a/views/relation.html
+++ b/views/relation.html
@@ -80,7 +80,7 @@
 	  <div class="tab-pane fade" id="itemfreq" role="tabpanel" aria-labelledby="itemfreq-tab">
 	  </div>
 	  <div class="tab-pane fade" id="table_tab" role="tabpanel" aria-labelledby="table-tab">
-		  <table id="table" class="table table-bordered table-hover">
+		  <table id="relation-table" class="table table-bordered table-hover">
 				<tbody>
 				</tbody>
 		  </table>
