display relation table

--- a/views/relation.html
+++ b/views/relation.html
@@ -81,8 +81,8 @@
 	  </div>
 	  <div class="tab-pane fade" id="table_tab" role="tabpanel" aria-labelledby="table-tab">
 		  <table id="relation-table" class="table table-bordered table-hover">
-				<tbody>
-				</tbody>
+				<thead></thead>
+				<tbody></tbody>
 		  </table>
 	  </div>
 	  </div>
