--- a/views/register.html
+++ b/views/register.html
@@ -34,12 +34,6 @@
 			<button class="btn btn-lg btn-danger btn-block" id="cancel">返回</button>
 		</div>
 	</form>	
-	<script type="text/javascript">
-		$("#cancel").click(e => {
-			window.location.href = "/login"
-		})
-	</script>
-	<script type="text/javascript" src="/src/register.js"></script>
+	<script type="text/javascript" src="/lib/register.js"></script>
 </body>
-
 </html>
