--- a/views/relation.html
+++ b/views/relation.html
@@ -87,7 +87,7 @@
 	  </div>
 	  </div>
 </div>
-<script type="text/javascript" src="/src/relation.js"></script>
+<script type="text/javascript" src="/lib/relation.js"></script>
 <style type="text/css">
 	#medicines {
 		margin-bottom: 20px;
