--- a/views/tuijian.html
+++ b/views/tuijian.html
@@ -17,5 +17,5 @@
 		</table>
 	</div>
 </div>
-<script type="text/javascript" src="/src/tuijian.js"></script>
+<script type="text/javascript" src="/lib/tuijian.js"></script>
 </html>
