--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,10 @@ h1 {
 	text-align: center;
 	margin-bottom: 30px;
 }
+
+a:hover{
+	text-decoration: none;
+}
 /*
 .row {
 	display: flex;
@@ -95,4 +99,42 @@ input.form-control, select.form-control {
 
 .slider.slider-horizontal .slider-track-high {
 	background: white;
+}
+
+.loader-div {
+	position: fixed;
+	display: none;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+	background: white;
+	opacity: 0.5;
+}
+
+.loader {
+	position: absolute;
+	top: 45%;
+	left: 48%;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 100px;
+  height: 100px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
