--- a/views/julei.html
+++ b/views/julei.html
@@ -49,5 +49,5 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="/src/julei.js"></script>
+<script type="text/javascript" src="/lib/julei.js"></script>
 </html>
