--- a/views/login.html
+++ b/views/login.html
@@ -29,15 +29,16 @@
     </form>
   </body>
   <script type="text/javascript">
-    $(document).ready(() => {
+    $(document).ready(function() {
       if (window.localStorage.username) {
         $("#user-name").val(window.localStorage.username)
         $("#pass-word").focus()
       }
     })
-    $("#login").click(e => {
+    $("#login").click(function(e) {
       e.preventDefault()
       window.localStorage.username = $("#user-name").val()
+      console.log('clicked')
       $.ajax({
         url: '/login',
         method: 'POST',
@@ -45,9 +46,9 @@
           username: $("#user-name").val(),
           password: $("#pass-word").val()
         }
-      }).done(data => {
+      }).done(function(data) {
         window.location.href = "/main"
-      }).fail(err => {
+      }).fail(function(err){
         if (err.status === 401) {
           alert(err.responseText)
           window.location.reload()
