--- a/views/wenzhen.html
+++ b/views/wenzhen.html
@@ -38,6 +38,5 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="/src/dropdown.js"></script>
-<script type="text/javascript" src="/src/wenzhen.js"></script>
+<script type="text/javascript" src="/bundles/wenzhen.js"></script>
 </html>
