--- a/views/panel.html
+++ b/views/panel.html
@@ -57,11 +57,14 @@
         </li>
       </ul>
     </div>
-
-	  <a class="btn" id="menu-toggle">
-	  	<img src="/icons/menu.png" width="25" height="25">
-	  	<br>菜单</br>
-	  </a>
+    <div class="head-row">
+		  <a class="btn" id="menu-toggle">
+		  	<img src="/icons/menu.png" width="25" height="25">
+		  	<br>
+		  	菜单
+		  </a>
+		  <button class="btn btn-outline-primary small-btn" id="back-btn">返回</button>
+		</div>
     <div class="page-container">
   	  <div id="page-wenzhen" class="page-content"></div>
       <div id="page-relation" class="page-content"></div>
