--- a/views/julei.html
+++ b/views/julei.html
@@ -38,11 +38,18 @@
 				  <li class="nav-item">
 				    <a class="nav-link" id="vis-tab" data-toggle="tab" href="#vis" role="tab" aria-controls="vis" aria-selected="false">聚类图</a>
 				  </li>
+				  <li class="nav-item">
+				    <a class="nav-link" id="table-tab" data-toggle="tab" href="#table" role="tab" aria-controls="table" aria-selected="false">药物质量</a>
+				  </li>
 				</ul>
 				<div class="tab-content" id="myTabContent">
 				  <div class="tab-pane fade show active" id="tree" role="tabpanel" aria-labelledby="tree-tab">
 				  </div>
 				  <div class="tab-pane fade" id="vis" role="tabpanel" aria-labelledby="vis-tab">
+				  </div>
+				  <div class="tab-pane fade" id="table" role="tabpanel" aria-labelledby="table-tab">
+					  <table id="zhiliang-table" class="table table-bordered table-hover">
+					  </table>
 				  </div>
 				</div>
 			</div>
