--- a/views/panel.html
+++ b/views/panel.html
@@ -18,7 +18,7 @@
     <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
-        	<a>夏树科技</a>  
+        	<a>夏数科技</a>  
         </li>
         <li>
           <a href="#page-wenzhen">
